# mergepack

./: .gitignore  AGENT_SKILLS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT_SPEC.md  README.md  SECURITY.md  action.yml  launch.md  pyproject.toml
.agents/skills/mergepack/: SKILL.md
.claude/skills/mergepack/: SKILL.md
.github/skills/mergepack/: SKILL.md
.github/workflows/: ci.yml  mergepack.yml
examples/: mini-mergepack.html  mini-mergepack.md  real-repo-smoke.md  sample-pr.diff
examples/config-fixtures/: README.md
examples/config-fixtures/node-repo/: README.md  mergepack.json  package.json
examples/config-fixtures/python-repo/: .mergepack.json  README.md  pyproject.toml
examples/language-fixtures/: README.md  expected-packets.json  go-pr.diff  node-pr.diff  rust-pr.diff
examples/language-fixtures/go-repo/: README.md  go.mod
examples/language-fixtures/node-repo/: README.md  package.json
examples/language-fixtures/rust-repo/: Cargo.toml  README.md
examples/mini-repo/: AGENTS.md  pyproject.toml
examples/mini-repo/src/: checkout.py
examples/mini-repo/tests/: test_checkout.py
src/mergepack/: __init__.py  cli.py  core.py  render.py
tests/: test_mergepack.py
